--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,271 @@
+:root {
+    --primary: #44BA88;
+    --grey: #ddd;
+    --base-padding: .5rem 1rem;
+    --base-margin: 1rem;
+}
+
 .leaflet-container {
     height: 500px;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.flex-row {
+    flex-direction: row;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.border-bottom {
+    border-bottom: 1px solid var(--grey);
+}
+
+.border-grey {
+    border-color: var(--grey);
+}
+
+.border-primary {
+    border-color: var(--primary);
+}
+
+.border-light {
+    border-color: #fff;
+    opacity: 0.4;
+}
+
+.text-primary {
+    color: var(--primary);
+}
+
+.text-light {
+    color: #fff;
+}
+
+.bg-primary {
+    background: var(--primary);
+}
+
+.list-unstyled {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.d-grid {
+    display: grid;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+#weather-data {
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.text-center {
+    text-align: center;
+}
+
+.vh-100 {
+    min-height: 100vh;
+}
+
+.display-4 {
+    font-size: 1.25rem;
+}
+
+.display-3 {
+    font-size: 1.5rem;
+}
+
+.display-2 {
+    font-size: 1.75rem;
+}
+
+.display-1 {
+    font-size: 2rem;   
+}
+
+.nav {
+    border-bottom: 1px solid var(--primary);
+    padding: var(--base-padding);
+    align-items: center;
+}
+
+.mb-1 {
+    margin-bottom: 1rem;
+}
+
+.ml-1 {
+    margin-left: 1rem;
+}
+
+.p-1 {
+    padding: 1rem;
+}
+
+.p-bal {
+    padding: 1rem .5rem;
+}
+
+.px-1 {
+    padding: 0 1rem;
+}
+
+.py-1 {
+    padding: 1rem 0;
+}
+
+.w-75 {
+    width: 75%;
+}
+
+.w-90 {
+    width: 90%;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.m-0 {
+    margin: 0;
+}
+
+.p-0 {
+    padding: 0;
+}
+
+.align-self {
+    align-self: center;
+}
+
+.justify-self {
+    justify-self: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.container {
+    width: 75vw;
+}
+
+.btn {
+    padding: var(--base-padding);
+    border: 0;
+    width: 100%;
+}
+
+.btn-primary {
+    background: var(--primary);
+    color: #fff;
+}
+
+.gradient {
+    background: linear-gradient(rgba(68,186,136,1), rgba(68,186,136,0.8));
+}
+
+#weather-container {
+    background-image: url('../images/cloud-compressed.jpg');
+    background-size: cover;
+    width: 100%;
+}
+
+.absolute {
+    position: absolute;
+}
+
+.message {
+    background: var(--primary);
+    padding: var(--base-padding);
+    color: #fff;
+}
+
+.top-center {
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.index-top {
+    z-index: 9999;
+}
+
+/* base styling */
+
+ul li {
+    padding: var(--base-padding);
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form input {
+    border: 0;
+    padding: .5rem 0;
+    border-bottom: 1px solid var(--grey);
+    margin-bottom: 1rem;
+    text-align: center;
+    width: 100%;
+    transition: .5s border;
+}
+
+form input:focus {
+    border-bottom: 1px solid var(--primary);
+}
+
+hr {
+    border: 0;
+}
+
+.loader {
+    border: 16px solid var(--grey);
+    border-top-color: var(--primary);
+    border-radius: 50%;
+    height: 10vw;
+    width: 10vw;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #weather-data {
+        grid-template-columns: repeat(2, 1fr);
+    }
+};
