--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -273,4 +273,8 @@ hr {
     #weather-data {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .hide-mobile {
+        display: none;
+    }
 };
